// Diagrama de Base de Datos para el Módulo de Reportes y Tableros de Control (Dashboard)

Table usuarios {
  id int [pk, increment]
  nombre varchar
  email varchar
  rol varchar
  estado varchar
  fecha_registro timestamp
}

Table areas {
  id int [pk, increment]
  nombre_area varchar
  funcionario_encargado varchar
}

Table reportes_tramites {
  id int [pk, increment]
  nombre_reporte varchar
  categoria varchar
  area_id int
  usuario_id int
  estado varchar // Completado, Pendiente, Procesando, Error
  tiempo_respuesta_minutos int
  valor decimal
  fecha_creacion timestamp
}

Table notificaciones {
  id int [pk, increment]
  mensaje varchar
  tipo varchar
  leido boolean
  fecha timestamp
}

// Relaciones
Ref: reportes_tramites.area_id > areas.id
Ref: reportes_tramites.usuario_id > usuarios.id